# dev-report

./: README.md  pyproject.toml
docs/plans/: 2026-01-21-dev-report-design.md
src/dev_report/: __init__.py  cli.py  discovery.py  git_stats.py  github_prs.py  report.py
